--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Martin Cavanagh portfolio website. Computer Science student and aspiring developer."
+      content="Martin Cavanagh portfolio website. Computer Science student and  developer."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link
